Fix up normal-mode package install and add option to remove all overlays in that mode

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="lock_screen">Lock Screen</string>
     <string name="qs_header">QS Header</string>
     <string name="qs_row_col">QS Row/Column</string>
+    <string name="uninstall_all">Uninstall All Overlays</string>
 
     <string name="succeeded">Succeeded</string>
     <string name="back">Back</string>
