Add option to hide notification panel carrier label

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,6 +48,7 @@
     <string name="desktop_freeform_max">Max Freeform Window Count (Desktop)</string>
     <string name="freeform_max">Max Freeform Window Count</string>
     <string name="clock_position">Clock Position</string>
+    <string name="hide_panel_carrier">Hide Notification Panel Carrier Name</string>
 
     <string name="old_recents_desc">Restores the old vertical Recents carousel. Reboot required.</string>
     <string name="left_system_icons_desc">Move the system icons, like the WiFi, signal, etc icons, to the left of the status bar.</string>
@@ -61,6 +62,7 @@
     <string name="reboot_uninstall_desc">A reboot is required to complete the removal process. Would you like to reboot now?</string>
     <string name="reboot_first_again_desc">One more reboot is needed to activate the overlay. Tap this notification to reboot.</string>
     <string name="magisk_module_installed_desc">Please reboot to finish the installation.</string>
+    <string name="hide_panel_carrier_desc">Hide the carrier name shown at the bottom of the notification panel.</string>
 
     <string name="qqs_hint">Set your QS grid to 5x3 if the header icons overlap at higher values.</string>
     <string name="qs_row_col_hint">Set your QS grid to 5x3 for these to take effect.</string>
