--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,6 +51,7 @@
     <string name="hide_panel_carrier">Hide Notification Panel Carrier Name</string>
     <string name="synergy_not_installed">Synergy not Installed!</string>
     <string name="uninstall_legacy_overlays">Uninstall Legacy Overlays</string>
+    <string name="custom_nav_layout">Custom Navigation Bar Layout</string>
 
     <string name="old_recents_desc">Restores the old vertical Recents carousel. Reboot required.</string>
     <string name="left_system_icons_desc">Move the system icons, like the WiFi, signal, etc icons, to the left of the status bar.</string>
@@ -67,6 +68,7 @@
     <string name="hide_panel_carrier_desc">Hide the carrier name shown at the bottom of the notification panel.</string>
     <string name="use_synergy_desc">This needs to be enabled on ALL unrooted One UI 2.0 devices. It does not need to be enabled on rooted devices, or the Galaxy Note9/S9/S9+ running One UI 1.0.</string>
     <string name="uninstall_legacy_overlays_desc">OneUI Tuner was redesigned recently, changing the names of the overlays used. If you have a rooted device, or a Galaxy Note9/S9/S9+ on One UI 1.0, tap here to make sure the legacy overlays are removed.</string>
+    <string name="custom_nav_layout_desc">Set your own layout for the navigation bar. Reorder and remove buttons, or even add extra ones.</string>
 
     <string name="qqs_hint">Set your QS grid to 5x3 if the header icons overlap at higher values.</string>
     <string name="qs_row_col_hint">Set your QS grid to 5x3 for these to take effect.</string>
